// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/InputPassword Hide 1`] = `
<div>
  <input
    data-testid="input-password"
    onChange={[Function]}
    type="password"
    value="password"
  />
  <button
    data-testid="toggle-show-button"
    onClick={[Function]}
  >
    表示
  </button>
</div>
`;

exports[`Storyshots Example/InputPassword Local 1`] = `
<div>
  <input
    data-testid="input-password"
    onChange={[Function]}
    type="password"
    value=""
  />
  <button
    data-testid="toggle-show-button"
    onClick={[Function]}
  >
    表示
  </button>
</div>
`;

exports[`Storyshots Example/InputPassword Show 1`] = `
<div>
  <input
    data-testid="input-password"
    onChange={[Function]}
    type="text"
    value="password"
  />
  <button
    data-testid="toggle-show-button"
    onClick={[Function]}
  >
    非表示
  </button>
</div>
`;
